--- a/css/styles.css
+++ b/css/styles.css
@@ -469,45 +469,32 @@ a {
 
 /*--------------------------- FOOTER ------------------------*/
 
-.footer {
+.footer-board {
   background-color: #2e2f42;
-  height: 312px;
   padding-top: 100px;
   padding-bottom: 100px;
 }
-
-.footer-promo {
-  display: block;
-  margin-right: 120px;
-}
-
-.footer-text {
-  display: block;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: #f4f4fd;
-  max-width: 264px;
-}
-
-.footer-div {
-  display: flex;
-  align-items: baseline;
-}
-
-.footer-logo-link {
+.logo-footer {
   display: inline-block;
-  margin-bottom: 16px;
   font-family: "Raleway", sans-serif;
   font-weight: 700;
   font-size: 18px;
   line-height: 1.17;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
   color: #4d5ae5;
+  text-transform: uppercase;
+  letter-spacing: 0.03em;
+  margin-bottom: 16px;
 }
-
-.footer-soc-title {
+.footer-end {
+  line-height: 1.5;
+  color: #f4f4fd;
+  letter-spacing: 0.02em;
+  max-width: 264px;
+}
+.logo-footer-span {
+  color: #f4f4fd;
+}
+.footer-name-social {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
@@ -515,369 +502,303 @@ a {
   color: #fff;
   margin-bottom: 16px;
 }
-
-.footer-soc {
+.footer-list {
+  display: flex;
+  align-items: baseline;
+}
+.footer-list-text {
+  display: flex;
+  flex-direction: column;
+  margin-right: 120px;
+}
+.footer-list-social {
+  display: flex;
+  flex-direction: column;
+  margin-right: auto;
 }
 
-.footer-soc-list {
+.footer-icon-list {
   display: flex;
+  gap: 16px;
   justify-content: center;
   align-items: center;
-  gap: 16px;
 }
-
-.footer-cos-item {
-}
-
-.footer-soc-link {
-  background-color: #4d5ae5;
-  border-radius: 50%;
+.footer-icon-item {
   width: 40px;
   height: 40px;
+}
+.footer-icon-link {
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 100%;
+  height: 100%;
+  background-color: #4d5ae5;
+  border-radius: 50%;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.footer-soc-link:hover,
-.footer-soc-link:focus,
-.footer-soc-link:active
- {
-  background-color: #31d0aa;
-}
-
-.footer-soc-icon {
+.footer-icon-soc {
   fill: #f4f4fd;
 }
-
-.subscribe-div {
-  margin-left: 80px;
+.footer-icon-link:hover,
+.footer-icon-link:focus {
+  background-color: #31d0aa;
 }
-
-.footer-form-title {
-  margin-bottom: 16px;
+.footer-form-text {
   font-weight: 500;
-font-size: 16px;
-line-height: 1.5;
-letter-spacing: 0.02em;
-color: #fff;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #fff;
+  margin-bottom: 16px;
 }
-
 .footer-form {
+  display: flex;
+  gap: 24px;
 }
-
-.footer-label {
+.footer-input {
+  border: 1px solid #fff;
+  border-radius: 4px;
+  width: 264px;
+  height: 40px;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  background-color: transparent;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
+  color: #fff;
+  padding-left: 16px;
+}
+.footer-input::placeholder {
+  color: #fff;
+}
+.footer-btn {
+  border-radius: 4px;
+  padding: 8px 24px;
+  min-width: 165px;
+  height: 40px;
+  background-color: #4d5ae5;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  text-align: center;
+  color: #fff;
+  border: none;
   display: flex;
   align-items: center;
   justify-content: center;
-  flex-direction: row;
+  cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.footer-input {
-border: 1px solid #fff;
-border-radius: 4px;
-width: 264px;
-height: 40px;
-box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
-margin-right: 24px;
-background-color: transparent;
-padding-left: 16px;
-color: #fff;
-}
-
-.footer-input::placeholder {
-font-weight: 400;
-font-size: 12px;
-line-height: 2;
-letter-spacing: 0.04em;
-color: #fff;
-}
-
-.footer-btn {
-display: flex;
-align-items: center;
-justify-content: center;
-flex-direction: row;
-border-radius: 4px;
-padding: 8px 24px;
-width: 165px;
-height: 40px;
-background-color: #4d5ae5;
-font-weight: 500;
-font-size: 16px;
-line-height: 1.5;
-letter-spacing: 0.04em;
-text-align: center;
-color: #fff;
-padding-top: 8px;
-padding-bottom: 8px;
-border: none;
-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-cursor: pointer;
-}
-
-.footer-btn:hover {
+.footer-btn:hover,
+.footer-btn:focus {
   background-color: #404bbf;
 }
-
-.footer-svg-send {
-  margin-left: 16px;
+.form-icon {
   fill: #fff;
+  margin-left: 16px;
 }
 
-
-/*--------------------------- FOOTER END ------------------------*/
-
-/*--------------------------- BACKDROP ------------------------*/
+/*----------Modal---------*/
 
 .backdrop {
+  width: 100%;
+  height: 100%;
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(46, 47, 66, 0.4);
-  z-index: 999;
-  opacity: 0;
-  pointer-events: none;
-}
-
-.is-open {
+  background-color: rgba(46, 47, 66, 0.4);
   opacity: 1;
-  pointer-events: all;
+  pointer-events: none;
+  visibility: hidden;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
+.is-open {
+  opacity: 0;
+  pointer-events: auto;
+  visibility: visible;
+}
 .modal {
+  width: 408px;
+  min-height: 584px;
+  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12),
+    0 2px 1px 0 rgba(0, 0, 0, 0.2);
+  background-color: #fcfcfc;
+  border-radius: 4px;
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%) scale(1);
-  border-radius: 4px;
-  width: 408px;
-  min-height: 584px;
-  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
-background: #fcfcfc;
-padding: 72px 24px 24px 24px;
+  transform: translate(-50%, -50%);
+  padding: 72px 24px 24px 24px;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.modal-close-btn {
+.modal-open-btn {
   position: absolute;
   top: 24px;
   right: 24px;
-  border-radius: 4px;
-  border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
-width: 24px;
-height: 24px;
-padding: 0;
-cursor: pointer;
-background-color: #e7e9fc;
-display: flex;
-justify-content: center;
-align-items: center;
-transition: border, background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.modal-close-icon {
-  fill: #2e2f42;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.modal-close-btn:hover > .modal-close-icon {
-  fill: #fff;
-}
-
-.modal-close-btn:focus > .modal-close-icon {
-  fill: #fff;
-}
-
-.modal-close-btn:hover, .modal-close-btn:focus {
-  background-color: #404bbf;
-  border: none;
-}
-
-
-.modal-title {
-font-weight: 500;
-font-size: 16px;
-line-height: 1.5;
-letter-spacing: 0.02em;
-text-align: center;
-color: #2e2f42;
-margin-bottom: 16px;
-}
-
-.modal-form-box {
-  display: flex;
-  align-items: flex-start;
-justify-content: flex-start;
-flex-direction: column;
-font-weight: 400;
-font-size: 12px;
-line-height: 1.17;
-letter-spacing: 0.04em;
-color: #8e8f99;
-margin-bottom: 8px;
-}
-
-.modal-form {
-}
-
-.modal-form-div {
-  position: relative;
-  width: 360px;
-}
-
-.form-label {
-  margin-bottom: 4px;
-}
-
-.modal-input-name {
-border: 1px solid rgba(46, 47, 66, 0.4);
-border-radius: 4px;
-width: 100%;
-height: 40px;
-padding-left: 38px;
-outline: transparent;
-background-color: transparent;
-transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.modal-input-name:focus {
-  border-color: #4D5AE5;
-}
-
-.modal-form-svg {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  left: 0;
-  margin-left: 16px;
-  fill: #2e2f42;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.modal-input-name:focus + svg {
-  fill: #4d5ae5;
-}
-
-.modal-input-comment {
-  margin-top: 4px;
-  border: 1px solid rgba(46, 47, 66, 0.4);
-  border-radius: 4px;
-  width: 360px;
-  height: 120px;
-  padding-left: 16px;
-  padding-top: 8px;
-  outline: none;
-}
-
-.modal-input-comment:focus {
-  border: 1px solid #4d5ae5;
-}
-
-textarea::placeholder {
-font-weight: 400;
-font-size: 12px;
-line-height: 1.17;
-letter-spacing: 0.04em;
-color: rgba(46, 47, 66, 0.4);
-}
-
-.form-checkbox {
-  font-weight: 400;
-font-size: 12px;
-line-height: 1.16667;
-letter-spacing: 0.04em;
-color: #8e8f99;
-margin-top: 16px;
-margin-left: 24px;
-}
-
-.privacy-policy-link {
-  line-height: 1.33;
-text-decoration: underline;
-text-decoration-skip-ink: none;
-color: #4d5ae5;
-}
-
-.privacy-input {
-  margin-left: 24px;
-}
-
-.modal-field-checkbox {
-  margin-bottom: 24px;
-}
-
-.form-btn {
-  border-radius: 4px;
-  padding: 16px 32px;
-  width: 169px;
-  height: 56px;
+  height: 24px;
+  width: 24px;
+  padding: 0;
   cursor: pointer;
- margin: 24px auto;
- display: flex;
- justify-content: center;
- align-items: center;
- box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
- border: none;
-background: #4d5ae5;
-font-weight: 500;
-font-size: 16px;
-line-height: 1.5;
-letter-spacing: 0.04em;
-text-align: center;
-color: #ffffff;
-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);  
-}
-
-.span-checkbox-text {
-  margin-right: 8px;
-  width: 16px;
-  height: 16px;
-  border-radius: 2px;
-  border: 1px solid rgba(46, 47, 66, 0.4);
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  display: inline-flex;
-  align-items: center;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  background-color: #e7e9fc;
+  display: flex;
   justify-content: center;
-  fill: transparent;
+  align-items: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.form-btn:hover {
-  background-color: #404bbf;
-}
-
-.modal-check:checked + .check-text .span-checkbox-text {
-  fill: #f4f4fd;
+.modal-open-btn:hover,
+.modal-open-btn:focus {
   background-color: #404bbf;
   border: none;
+  fill: #ffffff;
 }
-
-.modal-check:checked + .check-text .span-checkbox-text svg {
-  fill: #f4f4fd;
+.modal-btn-icon {
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.modal-check {
-  margin-left: 24px;
+.modal-title {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: #2e2f42;
+  max-width: 360px;
+  height: 24px;
+  margin-bottom: 16px;
 }
-
-.modal-check:checked + .check-text .span-checkbox-text {
-  fill: #f4f4fd;
-  background-color: #404bbf;
-  border: none;
-}
-
-.check-text {
+.modal-label {
+  display: block;
+  margin-bottom: 4px;
+  font-family: "Roboto", sans-serif;
   font-weight: 400;
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.04em;
   color: #8e8f99;
-  white-space: nowrap;
 }
-
-/*--------------------------- BACKDROP END ------------------------*/
+.modal-input {
+  width: 100%;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+  width: 360px;
+  height: 40px;
+  background-color: transparent;
+  outline: transparent;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  padding-left: 38px;
+}
+.modal-input:focus {
+  border-color: #4d5ae5;
+}
+.modal-input:focus + .modal-field-icon {
+  fill: #4d5ae5;
+}
+.modal-field {
+  margin-bottom: 8px;
+}
+.model-input-wrap {
+  position: relative;
+}
+.modal-field-icon {
+  fill: #2e2f42;
+  position: absolute;
+  left: 16px;
+  top: 50%;
+  transform: translateY(-50%);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-texarea {
+  margin-bottom: 16px;
+}
+.modal-text {
+  width: 100%;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+  height: 120px;
+  background-color: transparent;
+  outline: transparent;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  resize: none;
+  padding: 8px 16px;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: rgba(46, 47, 66, 0.4);
+}
+.modal-text:focus {
+  border-color: #4d5ae5;
+}
+.modal-checkbox {
+  border-radius: 4px;
+  width: 360px;
+  height: 16px;
+  margin-top: 16px;
+  margin-bottom: 24px;
+}
+.check-text {
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: #8e8f99;
+  align-items: center;
+  margin-bottom: 24px;
+}
+.check-span {
+  width: 16px;
+  height: 16px;
+  border-radius: 2px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  fill: transparent;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  margin-right: 8px;
+}
+.modal-check:checked + .check-text span {
+  background-color: #404bbf;
+  border: none;
+  fill: #f4f4fd;
+}
+.modal-check:focus + .check-text span {
+  border-color: #4d5ae5;
+}
+.check-link {
+  line-height: 1.33333;
+  text-decoration: underline;
+  text-decoration-skip-ink: none;
+  color: #4d5ae5;
+}
+.modal-btn {
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  color: #fff;
+  background-color: #4d5ae5;
+  letter-spacing: 0.04em;
+  display: block;
+  min-width: 169px;
+  height: 56px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  margin: 0 auto;
+  padding: 16px 32px;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  transition-property: color;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-btn:hover,
+.modal-btn:focus {
+  background-color: #404bbf;
+}
